# link-to-pdf

./: main.py  pyproject.toml
app/: args_parser.py
app/base/: parser.py
app/common/: http_client.py  item.py  registry.py  validator.py
app/pikabu/: parser.py
